# datagvat-mcp

./: .gitignore  README.md  pyproject.toml
assets/: openapi.yaml
src/: __init__.py  common.py  main.py  server.py
src/endpoints/: __init__.py  catalogues.py  datasets.py  distributions.py  other.py  vocabularies.py
