[tool.poetry]
name = "datagvat-mcp"
version = "1.0.0"
description = "Simple MCP Server for data.gv.at - Austrian Open Data Platform"
authors = ["MCP Integration Team <contact@example.com>"]
readme = "README.md"
license = "MIT"
keywords = ["mcp", "data.gv.at", "open-data", "austria", "api"]
packages = [{include = "src"}]

[tool.poetry.scripts]
datagvat-mcp = "src.main:main"

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^1.13.1"
httpx = "^0.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"